2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.

2008-01-16  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.cpp: Fix some parameter defaults and ranges.

2008-01-15  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the ashikhmin02 method.

2008-01-14  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.cpp: Tune default values for reinhard05 method.
	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the reinhard02 method.
	* src/view_area.h, src/view_area.cpp: Update to new CVL interfaces.
	Improves performance.
	* conf/conf.cpp: Fix error message for invalid contents.

2008-01-13  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the reinhard05 method.

2008-01-12  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp,
	NEWS: Rename tumblinrushmeier99 to tumblin99, as in CVL.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* doc/cvltonemap.1, doc/cvltonemap.texi: Update.
	* src/main.cpp, src/cvltonemap.cpp: Update copyright year in --version
	output and AboutBox.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* configure.ac, src/tonemap_selector.h, src/tonemap_selector.cpp,
	src/view_area.cpp: Add support for the new schlick94 and
	tumblinrushmeier99 tonemap methods in CVL 0.2.3.
	* configure.ac, doc/cvltonemap.1, doc/cvltonemap.texi: Bump version to
	0.2.0.
	* README: Update.
